# ParaPo

./: .gitignore  COMPREHENSIVE_PLAN.md  Cargo.toml  README.md  package-lock.json  package.json  skills-lock.json
contracts/driver-vault/: Cargo.toml
contracts/driver-vault/src/: lib.rs  test.rs
contracts/driver-vault/test_snapshots/test/: test_credit_unregistered_driver_fails.1.json  test_register_and_credit.1.json  test_withdraw.1.json  test_withdraw_over_balance_fails.1.json
contracts/fare-escrow/: Cargo.toml
contracts/fare-escrow/src/: lib.rs  test.rs
contracts/fare-escrow/test_snapshots/test/: test_cancel_by_stranger_fails.1.json  test_cancel_refunds_full_amount.1.json  test_double_init_fails.1.json  test_finalize_above_max_fails.1.json  test_finalize_full_route_no_refund.1.json  test_finalize_partial_route_refunds_remainder.1.json  test_finalize_twice_fails.1.json  test_get_missing_ride_fails.1.json  test_init_sets_state.1.json  test_start_ride_locks_max_fare.1.json  test_start_ride_unregistered_driver_fails.1.json  test_start_ride_zero_amount_fails.1.json  test_upgrade_requires_admin_auth.1.json
oracle/: fares.js  package.json  server.js
scripts/: config.js  deploy.js  package-lock.json  package.json  seed.js  setup.js
web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/public/: manifest.webmanifest  sw.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AppGate.tsx  Balance.tsx  Header.tsx  OnlineBadge.tsx  OutboxFlusher.tsx  Qr.tsx  RideStatusPill.tsx  RouteMap.tsx  Scanner.tsx  ServiceWorker.tsx  Unlock.tsx
web/src/lib/: fares.data.json  fares.ts  format.ts  freighterStore.ts  (+5 more)
(+13 files in other folders)
