[package]
name = "driver-vault"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "ParaPo driver vault: coop-approved drivers, escrow credits, and withdrawals."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
