[package]
name = "fare-escrow"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "ParaPo fare escrow contract: locks max route fare, settles actual fare, refunds remainder."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
