[package]
name = "fare-escrow"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "ParaPo fare escrow contract: locks max route fare, settles actual fare, refunds remainder."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
# Only needed by the tests, which register a real driver-vault to call into.
# It is NOT a runtime dependency: the contract calls the vault through the
# `VaultClient` interface declared in `lib.rs`, so the vault's code is never
# linked into this contract's wasm.
driver-vault = { path = "../driver-vault" }
